1626285952 | 35 files | M bin/version.txt,  M drivers/lighthouse/resources/webinterface/pairing.html,  M drivers/lighthouse/resources/webinterface/pairing.js,  M resources/webinterface/dashboard/bindingcallouts.html,  M resources/webinterface/dashboard/bindingcallouts.js,  M resources/webinterface/dashboard/controllerbinding.html,  M resources/webinterface/dashboard/controllerbindingui.js,  M resources/webinterface/dashboard/debugcommands.html,  M resources/webinterface/dashboard/debugcommands.js,  M resources/webinterface/dashboard/fallback.html,  M resources/webinterface/dashboard/fallback.js,  M resources/webinterface/dashboard/keyboard.html,  M resources/webinterface/dashboard/keyboard.js,  M resources/webinterface/dashboard/localization/bindingui_czech.json,  M resources/webinterface/dashboard/localization/vrmonitor_danish.json,  M resources/webinterface/dashboard/localization/vrmonitor_dutch.json,  M resources/webinterface/dashboard/localization/vrmonitor_english.json,  M resources/webinterface/dashboard/localization/vrmonitor
https://steamdb.info/patchnotes/7031205/

--- a/resources/webinterface/dashboard/localization/bindingui_czech.json
+++ b/resources/webinterface/dashboard/localization/bindingui_czech.json
@@ -318,7 +318,7 @@
   "BindingUI_List_CreateBinding": "Vytvořit nové nastavení",
   "BindingUI_Mode_Delete_Confirm": "Odstranit režim „%1$s“ od vstupu %2$s?",
   "BindingUI_SavePersonal": "Uložit osobní nastavení",
-  "BindingUI_PublishToWorkshop": "Zveřejnit ve Workshopu",
+  "BindingUI_PublishToWorkshop": "Zveřejnit ve workshopu",
   "BindingUI_AddChord": "Přidat nové propojení",
   "BindingUI_DeleteChord": "Odstranit propojení",
   "BindingUI_AddChordInput": "Přidat vstup propojení",
