--- a/resources/webinterface/dashboard/localization/webhelper_dutch.json
+++ b/resources/webinterface/dashboard/localization/webhelper_dutch.json
@@ -26,7 +26,7 @@
 	"PowerMenuHeader": "Energiemenu",
 	"IPD_Description": "Afstand tussen lenzen",
 	"NoSteamWarning": "Steam is niet beschikbaar. Sommige functies kunnen uitgeschakeld zijn.",
-	"WakingUpBaseStations": "Basisstations wekken...",
+	"WakingUpBaseStations": "Basisstations worden geactiveerd...",
 	"/input/joystick": "Joystick",
 	"/input/trackpad": "Trackpad",
 	"/input/trigger": "Trekker",
