1628008725 | 22 files | M bin/version.txt,  M drivers/lighthouse/resources/webinterface/pairing.html,  M resources/webinterface/dashboard/bindingcallouts.html,  M resources/webinterface/dashboard/controllerbinding.html,  M resources/webinterface/dashboard/debugcommands.html,  M resources/webinterface/dashboard/fallback.html,  M resources/webinterface/dashboard/keyboard.html,  M resources/webinterface/dashboard/messageoverlay.html,  M resources/webinterface/dashboard/notificationtoast.html,  M resources/webinterface/dashboard/scenegraphtest.html,  M resources/webinterface/dashboard/settings_desktop.html,  M resources/webinterface/dashboard/systemreportviewer.html,  M resources/webinterface/dashboard/systemui.html,  M resources/webinterface/dashboard/vrmonitor.html,  M tools/steamvr_environments/game/steamtours/bin/linuxsteamrt64/libclient_strings.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir.txt,  M tools/steamvr_environments/game/steamtours/pak02_dir.txt,  M tools/steamvr_environments/game/steamtours/pak02_dir/panoram
https://steamdb.info/patchnotes/7131982/

--- a/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/localization/steamtours_english.txt
+++ b/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/localization/steamtours_english.txt
@@ -592,8 +592,8 @@
 		"VR_Avatar_Cosmos_Controllers_Desc"	"Cosmos controllers"
 		"VR_Avatar_ReverbG2_Controllers"		"Reverb G2 Controllers"
 		"VR_Avatar_ReverbG2_Controllers_Desc"	"Reverb G2 controllers"
-		"VR_Avatar_Generic_Tracked"			"Generic Tracked Controllers"
-		"VR_Avatar_Generic_Tracked_Desc"	"Generic tracked controllers"
+		"VR_Avatar_Generic_Tracked"			"SteamVR Rendermodels"
+		"VR_Avatar_Generic_Tracked_Desc"	"The current controller rendermodels from SteamVR"
 
 		// avatar wearables
 		"VR_Avatar_Wearable_BasicSphere001"		"Simple Sphere"
