--- a/resources/webinterface/dashboard/localization/dashboard_english.json
+++ b/resources/webinterface/dashboard/localization/dashboard_english.json
@@ -60,6 +60,8 @@
   "DockOnRightController": "Dock on Right Controller",
   "UndockFromRightController": "Undock from Right Controller",
   "DockedOnRightController": "Docked on right controller.",
+  "DockOnDashboard": "Dock on Dashboard",
+  "FloatInWorld": "Float in World",
   "Undock": "Undock",
   "ShowKeyboardLabel": "Keyboard",
   "ShowKeyboardTooltip": "Show Keyboard",
